--- a/app/templates/frames/clock_in_form.html.j2
+++ b/app/templates/frames/clock_in_form.html.j2
@@ -31,6 +31,7 @@
                             value="in"
                             type="submit">Clock In</button>
                 {% endif %}
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             </div>
         </div>
     </div>
